[project]
name = "videotuner"
version = "0.4.0"
description = "A CRF optimization and encoder benchmarking tool that uses VMAF and SSIMULACRA2 quality metrics to find the optimal rate factor for video encoding."
readme = "README.md"
authors = [
    { name = "AVFoundry", email = "avfoundry@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "pymediainfo>=7.0.1",
]

[project.scripts]
videotuner = "videotuner.pipeline:main"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.3",
    "ruff>=0.14.10",
]
build = [
    "nuitka>=4.0.8",
    "ordered-set>=4.1.0",  # Faster Nuitka builds
    "zstandard>=0.25.0",   # Better compression for onefile
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videotuner"]

[tool.ruff]
exclude = [
    "vapoursynth-portable",
]
