[project]
name = "videotuner"
version = "0.4.0"
description = "A CRF optimization and encoder benchmarking tool that uses VMAF and SSIMULACRA2 quality metrics to find the optimal rate factor for video encoding."
readme = "README.md"
authors = [
    { name = "sleepy-af-dev" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "pymediainfo>=7.0.1",
]

[project.scripts]
videotuner = "videotuner.pipeline:main"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.3",
    "ruff>=0.14.10",
]
build = [
    "nuitka>=4.0.8",
    "ordered-set>=4.1.0",  # Faster Nuitka builds
    "zstandard>=0.25.0",   # Better compression for onefile
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videotuner"]

[tool.uv]
# Security floor for a transitive dependency (pulled in by rich).
# pygments < 2.20.0 has a ReDoS in AdlLexer (GHSA / Dependabot alert).
constraint-dependencies = ["pygments>=2.20.0"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "vapoursynth-portable",
]

[tool.ruff.lint]
# E501 = line length (88); F = pyflakes (unused imports/names); I = import sorting; UP = pyupgrade.
select = ["E501", "F", "I", "UP"]

[tool.basedpyright]
exclude = ["vapoursynth-portable", ".venv"]
venvPath = "."
venv = ".venv"
